Fixing video overflow on y

--- a/assets/css/templatemo-breezed.css
+++ b/assets/css/templatemo-breezed.css
@@ -316,33 +316,26 @@ a.text-button-icon:hover i {
   overflow-y: auto;
 }
 #demoVideo{
-  max-width:100% !important;
+  /*max-width:100% !important;
   max-height: 100%;
   display: block;
   outline: none;
   overflow-y: auto;
-  position:relative;
+  position:relative;*/
 
-   
-      /*right: 0; 
-      bottom: 0;
-      max-width: 100%; 
-      min-height: 100%;
-      width: auto; 
-      height: auto; 
-      z-index: -100;
-      background-size: cover;
-      overflow-y: hidden;
-*/
-/*display: flex;*/
+  /*height: 100vh;*/
+  width: 100%;
+  object-fit: cover; // use "cover" to avoid distortion
+  position: absolute; 
+     
 
 }
 
 /* Chrome only: */
 @media all and (-webkit-min-device-pixel-ratio:0) and (min-resolution: .001dpcm){
     #demoVideo{
-      max-width:400px;
-      border: 2px solid red;
+      /*max-width:400px;*/
+      /*border: 2px solid red;*/
 
     }
 }
